# netflux

./: .gitignore  claude.md
backend/: .env.example  README.md  database.py  episode_description_service.py  image_service.py  main.py  models.py  pyproject.toml  test_image_generation.py  title_service.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  api.js  index.css
frontend/src/components/: Admin.js  EpisodeDetails.js  Episodes.js  Home.js  Navigation.js
